--- a/base.html
+++ b/base.html
@@ -70,7 +70,7 @@
     <div class="detail">
       <div class="tracklist">
         <div class="detail-title">Tracklist</div>
-        <div class="song-list" data-video="뮤비 링크(없으면 삭제)">노래 제목</div>
+        <div class="song-list" data-video="뮤비 비디오 ID(없으면 삭제)">노래 제목</div>
         <div class="song-list">노래 제목</div>
       </div>
     </div>
